Bug 254964 - Unreviewed attempt to fix Catalyst build after 262488@main
Summary: Unreviewed attempt to fix Catalyst build after 262488@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-03 20:30 PDT by Chris Dumez
Modified: 2023-04-03 20:37 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-04-03 20:30:15 PDT
Fix Catalyst build after 262488@main.
Comment 1 Radar WebKit Bug Importer 2023-04-03 20:30:43 PDT
<rdar://problem/107591818>
Comment 2 Chris Dumez 2023-04-03 20:32:06 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12356
Comment 3 EWS 2023-04-03 20:37:00 PDT
Committed 262560@main (4a719084c903): <https://commits.webkit.org/262560@main>

Reviewed commits have been landed. Closing PR #12356 and removing active labels.