Unreviewed attempt to fix Catalyst build after 262488@main https://bugs.webkit.org/show_bug.cgi?id=254964 rdar://107591818

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::~WebPageProxy):
(WebKit::WebPageProxy::updatePlayingMediaDidChange):

Canonical link: https://commits.webkit.org/262560@main